required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
----------------------------

- Avoid fatal error when creating new ShapeFileObj with MapScript (#2674)

- Fixed problem with WMS INIMAGE exceptions vs AGG output formats (#2438)

- mapshape.c: Fixed integer pointer math being applied to uchars (#2667)

- Fixed seg fault with saveImage() in PHP MapScript due to #2673 (#2677)

- Fixed configure error related to new fribidi2 pkg-config support (#2664)

- Fixed windows build problem (#2676)

- Fix raster query bounds problem (#2679)


Version 5.2.0-beta4 (2008-07-02):
---------------------------------

- Added support in configure script for pkg-config for fribidi2 (#2664)

- Added more debug/tuning output to mapserv and shp2img at debug level 2 (#2673)

- maptemplate.c: removed extra line feeds from mime header output. (#2672)

- mapresample.c: fix for bug 2540 when using raster resampling and AGG.

- mapsde.c: Check at compile time that we have SE_connection_test_server, 
  which appears to only be available for ArcSDE 9+ (#2665).
  
- mapshape.c: restore old behavior of tiled shapes relative to shapepath
  with new behavior for when shapepath is undefined (#2369)

- maputil.c: fix a bug for offset lines with agg, when the first segment 
  was horizontal (#2659)

- mapraster.c: fix for tiled rasters with relative shape paths defined, 
  from dfurhy (#2369)

- maptemplate.c: fixed a problem with extent tags with _esc extension not 
  working (#2666)

Version 5.2.0-beta3 (2008-06-26):
---------------------------------

- mapsde.c: processing option added to allow using fully qualified names
  for attributes (#2423).           
